# GILBERTDesktop

./: .gitignore  BUILD_MULTI_PLATFORM.md  CONTEXT.md  DIAGNOSTIC-DESKTOP.md  DIAGNOSTIC-RELEASE-1.3.1.md  HOW_TO_SHARE_AND_OPEN.md  INSTALLATION-WINDOWS.md  INSTRUCTIONS_DEPLOYMENT.md  LOGO_SETUP.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  RELEASE_FILES.md  SECRETS-RELEASE.md  SYNC_AND_DISTRIBUTE.md  UPGRADE-AUTO-UPDATE.md  debut.md  deploy.sh  deploy_queue_system.sh  docker-compose.production.yml  env.production  index.html  nginx-http.conf  package.json  requirements.txt  share-app.sh  sync-desktop.sh  termianl depuis le debut.txt  tsconfig.json
.github/workflows/: build-desktop.yml  build-manual.yml  release-gilbert.yml  release.yml  sync-desktop.yml
database/: init.sql
desktop/: .gitignore  DISTRIBUTION.md  FIXES_SUMMARY.md  build.sh  components.plist  fix-bundle.sh  open-app.sh  package-lock 2.json  package.json  setup_dmg.applescript
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.mac.plist  round-icon.sh  round_icon.py  tauri.conf.json  test_sck.swift
desktop/src-tauri/icons 2/: icon.icns
desktop/src-tauri/src/: api.rs  background_sync.rs  config.rs  lib.rs  main.rs  mic_monitor.rs  queue.rs  recorder.rs  state.rs  video_app_detector.rs  window_state.rs
desktop/src-tauri/src 2/: main.rs  recorder.rs
desktop/src-tauri/src 2/swift/: ScreenCaptureAudio.swift
desktop/src-tauri/src/swift/: ScreenCaptureAudio.swift  sck_bridge.h
desktop/src-tauri/src/system_audio/: macos.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts  widget.html
frontend/src/: index.css  main.tsx
nginx/: nginx-simple.conf  nginx.conf
nginx/conf.d/: simple.conf
scripts/: diagnostic-dmg.sh  migrate_sqlite_to_postgres.py  nettoyer-gilbert-mac.sh  simulate-ci-import.sh  verify-p12.sh
src-tauri/: Info.plist
(+168 files in other folders)
